# genapi

./: .gitignore  README.md  pyproject.toml
.envs/: example.env
src/api/: main.py
src/genapi/: __init__.py
src/genapi/models/: audio.py  text.py
src/ui/: client.py
